# Super_Trunfo

./: CMakeLists.txt  README.md  card.h  cards.cpp  cards.h  deck.cpp  deck.h  itens.txt  jodador.h  jogador.cpp  jogador.h  jogo.cpp  jogo.h  main.cpp  regras.md
images/: imagens.py
